Revision history for ExtUtils-Builder-Compiler

{{$NEXT}}
          - Add typemap and hiertype arguments to parse-xs

0.015     2024-07-20 15:18:22+02:00 Europe/Brussels
          - Add exe_file helper to EU::B::Autodetect::C
          - Add missing argument in MSCV manifesting
          - Add directories to loadable_file/library_file/exe_file
          - Use parent instead of base

0.014     2024-07-17 01:30:56+02:00 Europe/Brussels
          - Correctly check os version with -iwithsysroot

0.013     2024-07-16 19:11:54+02:00 Europe/Brussels
          - Use -iwithsysroot on Mac for systemperl

0.012     2024-07-15 21:03:08+02:00 Europe/Brussels
          - Fix implicit mkdir in compile action
          - Added message to function actions

0.011     2024-07-14 16:57:11+02:00 Europe/Brussels
          - Depend on ExtUtils::Builder 0.007

0.010     2024-07-14 12:55:11+02:00 Europe/Brussels
          - Adapt to version argument in load_module

0.009     2024-07-02 19:10:19+02:00 Europe/Brussels
          - Eliminate references to no longer existing _libraries method

0.008     2024-06-28 12:36:56+02:00 Europe/Brussels
          - Simplify libperl linking logic on Windows

0.007     2024-06-18 20:39:07+02:00 Europe/Brussels
          - Use split_like_shell instead of shellwords
          - Fix adding of libraries for MSVC

0.006     2024-06-17 18:52:59+02:00 Europe/Brussels
          - Fix ranking of libperl argument on Windows
          - Correct initialization of Linker::PE::MSVC

0.005     2024-06-16 18:17:46+02:00 Europe/Brussels
          - Simplify executable check
          - Reorder libperl argument on Windows

0.004     2024-05-14 10:38:55+02:00 Europe/Brussels
          - Set default export value for Linker::PE::GCC
          - Correct loading ExtUtils::Builder::Action::Function in Linker

0.003     2024-05-06 11:37:41+02:00 Europe/Brussels
          - Add correct libperl for Cygwin and Windows