@@ -1,3 +1,3 @@
 runtime:
   requires:
-    ExtUtils::Builder::Planner: 0.007
+    ExtUtils::Builder::Planner: 0.009
